--- a/CompanyEmployees/appsettings.json
+++ b/CompanyEmployees/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Host=localhost; Port=5432; Database=myCompany; User Id=postgres; Password=changerootfs &1 PG;"
+    "sqlConnection": "Host=localhost; Port=5432; Database=dbname; User Id=postgres; Password=password;"
   },
   "AllowedHosts": "*"
 }
